# Megatron-LM

./: .gitignore  .pre-commit-config.yaml  preprocess_tracking_data.py  pretrain_gpt.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
configs/: odd-data-preprocess-config.yaml  odd-data-preprocess-v3.yaml  odd-vocab.txt
data/: odd-vocab.txt
examples/: pretrain_gpt.sh  pretrain_gpt3_175B.sh  run_text_generation_server_345M.sh
megatron/training/: arguments.py
megatron/training/tokenizer/: tokenizer.py
tracking/datamodules/: odd_reader.py
tracking/notebooks/: view_detector.ipynb
tracking/scripts/: preprocess_tracking_data.py
tracking/tokenizer/: bert_tokenization.py  help_tokenizer.py  module_id.py  tokenizer.py
