# Copyright (c) 2023, NVIDIA CORPORATION.  All rights reserved.

[build-system]
requires = [
    "setuptools",
    "pybind11",
]

[tool.isort]
profile = "black"  # black-compatible
line_length = 100  # should match black parameters
py_version = 38  # python 3.8 as a target version
known_first_party = ["megatron"]  # FIRSTPARTY section
known_third_party = ["transformer_engine"]  # THIRDPARTY section
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
extend_skip = ["setup.py"]

[tool.black]
line_length = 100
skip_string_normalization = true
# recongized by future versions, disallows to reformat code with incompatible versions
# Matches NeMO version so people working on both codebases don't need two different version of black installed
required_version = "19.10b0"

[tool.ruff]
line-length = 100
preview = true
lint.select = ["ALL"]
lint.ignore = [
    "COM", "D100", "D101", "D102", "D103", "D104", "D105", "D205", "D401", "EM", "FIX", "FBT",
    "S101", "S404", "S602", "PLR2004", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0917",
    "PLC0415", "G004", "PD901", "N802", "C901", "DTZ005", "DTZ007", "INP", "EXE002", "TD002",
    "ANN001", "ANN002", "ANN003", "ANN101", "ANN201", "ANN202", "ANN204", "CPY001", "TRY003",
    "N803", "N806", "N812", "T201", "PLW1514", "PTH123", "RUF015", "RUF017", "PLR6301", "ERA", "ISC001",
    "RET504", "SLF001", "S403", "PLR1702", "SIM115"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
